--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
     "mdi-react": "^9.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
