fcm device token logic addDeviceToken & sendPushNotification mutations, service worker env variables adjustments

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^6.1.8",
@@ -12,7 +12,7 @@
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.2",
+    "@mui/material": "^5.14.6",
     "@mui/x-data-grid": "^6.6.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
     "firebase": "^10.3.0",
+    "firebase-admin": "^11.10.1",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
     "leaflet": "^1.9.4",
