--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.2",
     "typescript": "^5.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
